[gd_scene load_steps=4 format=3 uid="uid://d3kc75gebw06h"]

[ext_resource type="Theme" uid="uid://b2j828oako0na" path="res://main.tres" id="1_hyubm"]
[ext_resource type="Script" path="res://WasItWorthIt/dialogue_container.gd" id="1_i834a"]
[ext_resource type="Texture2D" uid="uid://fn8hlcsvyve4" path="res://Textures/self_message.png" id="2_j68k7"]

[node name="DialogueContainer" type="MarginContainer"]
z_index = 1
layout_direction = 3
offset_right = 10.0
offset_bottom = 12.0
size_flags_horizontal = 0
size_flags_vertical = 4
script = ExtResource("1_i834a")

[node name="DialogueBubble" type="NinePatchRect" parent="."]
z_index = -1
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource("2_j68k7")
patch_margin_left = 3
patch_margin_top = 4
patch_margin_right = 5
patch_margin_bottom = 8
metadata/_edit_lock_ = true

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 1
theme_override_constants/margin_top = 1
theme_override_constants/margin_right = 1
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="DialogueText" type="Label" parent="MarginContainer/VBoxContainer"]
z_index = 1
custom_minimum_size = Vector2(8, 6)
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("1_hyubm")
vertical_alignment = 1
metadata/_edit_lock_ = true
